@@ -1,6 +1,7 @@
 ## 0.x.x / xxxx-xx-xx
 
-* Add chain of Runner middlewares.
+* Added custom error type to know where the error comes from (library or outside).
+* Added chain of Runner middlewares.
 * Measure retry, bulkhead, timeout, failure injector, circuit breaker and command exection.
 * Added metrics recorder through the execution context.
 * Added failure injector.
